test/visibility/import/enablesUnqualified/multipleUnqualified/allButOne-error2.good
allButOne-error2.chpl:12: In function 'main':
allButOne-error2.chpl:13: error: 'A' undeclared (first use this function)
